--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.68.1",
     "@react-native-async-storage/async-storage": "^1.17.3",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.1",
     "@rneui/base": "^4.0.0-rc.2",
     "@rneui/themed": "^4.0.0-rc.2",
+    "react": "17.0.2",
+    "react-native": "0.68.1",
     "react-native-gesture-handler": "^2.4.1",
+    "react-native-pager-view": "^5.4.15",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.1"
   },
@@ -32,6 +36,7 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.67.3",
+    "@types/react-redux": "^7.1.24",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.17.0",
     "@typescript-eslint/parser": "^5.17.0",
@@ -40,8 +45,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4",
-    "@types/react-redux": "^7.1.24"
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "^17"
