--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -319,3 +319,19 @@ def isNewArchitectureEnabled() {
     // - Set an environment variable `ORG_GRADLE_PROJECT_newArchEnabled=true`
     return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
 }
+
+android {
+signingConfigs {
+release {
+storeFile file(MYAPP_RELEASE_STORE_FILE)
+storePassword MYAPP_RELEASE_STORE_PASSWORD
+keyAlias MYAPP_RELEASE_KEY_ALIAS
+keyPassword MYAPP_RELEASE_KEY_PASSWORD
+}
+}
+buildTypes {
+release {
+signingConfig signingConfigs.release
+}
+}
+}
