--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crmsantiago",
+  "name": "crm_santiago_ways",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,7 +7,9 @@
     "ios": "react-native run-ios",
     "start": "react-native start --reset-cache",
     "test": "jest",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "release": "cd android && ./gradlew assembleRelease",
+    "release:test": "npx react-native run-android --variant=release"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
